--- a/demo.html
+++ b/demo.html
@@ -36,8 +36,7 @@
         <!-- Custom CSS -->
         <link href="css/style.css" rel="stylesheet">
 
-        <link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
-        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,300italic' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Noto+Serif:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 
 
 
@@ -58,7 +57,7 @@
         <h5>Heading 5</h5>
         <h6>Heading 6</h6>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum praesentium ab, provident error optio qui sequi a aliquam nemo exercitationem laudantium commodi magni eaque quisquam corporis quos quasi. Blanditiis, quas.</p>
+        <p class="dropcap">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum praesentium ab, provident error optio qui sequi a aliquam nemo exercitationem laudantium commodi magni eaque quisquam corporis quos quasi. Blanditiis, quas.</p>
 
         <p class="red">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime provident, numquam, porro illo atque inventore sint doloremque. Eius fugiat vel sint aliquam debitis soluta, quo aliquid, esse saepe accusamus, quisquam?</p>
 
@@ -82,6 +81,191 @@
         <div class="big-box red-bg">
             <h1 class="white">SOME WHITE SHIT</h1>
         </div>
+
+
+ <form>
+    <section id="form-input">
+<h2>Input</h2>
+
+
+  <label for="">Input Type Text</label>
+  <input type="text" name="input-type-text">
+
+  <label for="">Input Type Email</label>
+  <input type="email" name="input-type-email">
+
+  <label for="">Input Type Password</label>
+  <input type="password" name="input-type-password">
+
+  <label for="">Input Type URL</label>
+  <input type="url" name="input-type-url">
+
+  <label for="">Input Type Tel</label>
+  <input type="tel" name="input-type-tel">
+
+  <label for="">Input Type Number</label>
+  <input type="number" name="input-type-number">
+
+  <label for="">Input Type Search</label>
+  <input type="search" name="input-type-search">
+
+
+
+  <label for="">Input Type Checkbox</label>
+  <input type="checkbox" name="input-type-checkbox1"> Value 1<br>
+  <input type="checkbox" name="input-type-checkbox2"> Value 2<br>
+  <input type="checkbox" name="input-type-checkbox3"> Value 3<br>
+
+  <label for="">Input Type Radio</label>
+  <input type="radio" name="input-type-radio1"> Value 1<br>
+  <input type="radio" name="input-type-radio2"> Value 2<br>
+  <input type="radio" name="input-type-radio3"> Value 3<br>
+
+  <label for="">Input Type Range</label>
+  <input type="range" name="input-type-range">
+
+
+
+  <label for="">Input Type File</label>
+  <input type="file" name="input-type-file">
+  <input type="file" name="input-type-file">
+
+  <label for="">Input Type Color</label>
+  <input type="color" name="input-type-color">
+
+
+
+  <label for="">Input Type Date</label>
+  <input type="date" name="input-type-date">
+
+  <label for="">Input Type Datetime Local</label>
+  <input type="datetime-local" name="input-type-datetime-local">
+
+  <label for="">Input Type Month</label>
+  <input type="month" name="input-type-month">
+
+  <label for="">Input Type Time</label>
+  <input type="time" name="input-type-time">
+
+  <label for="">Input Type Week</label>
+  <input type="week" name="input-type-week">
+
+
+</section>
+    <section id="form-select-button">
+<h2>Datalist</h2>
+
+
+  <label for="">Input with Datalist</label>
+    <input list="browsers">
+
+    <datalist id="browsers">
+      <option value="Internet Explorer">
+      <option value="Firefox">
+      <option value="Chrome">
+      <option value="Opera">
+      <option value="Safari">
+    </datalist>
+
+
+</section>
+
+    <section id="form-textarea">
+<h2>Textarea</h2>
+
+
+  <label for="textarea">Textarea</label>
+  <textarea name="textarea" id="" cols="30" rows="10"></textarea>
+
+
+
+
+</section>
+    <section id="form-select-option">
+<h2>Select and Option</h2>
+
+
+  <label for="select-normal">Select Default</label>
+  <select name="select-normal" id="">
+        <option value="">Option 1</option>
+        <option value="">Option 2</option>
+        <option value="">Option 3</option>
+  </select>
+
+
+  <label for="select-optgroup">Select with Optgroup</label>
+  <select name="select-optgroup" id="">
+        <optgroup label="Optgroup 1">
+            <option value="">Option 1</option>
+            <option value="">Option 2</option>
+            <option value="">Option 3</option>
+        </optgroup>
+
+        <optgroup label="Optgroup 2">
+            <option value="">Option 1</option>
+            <option value="">Option 2</option>
+            <option value="">Option 3</option>
+        </optgroup>
+  </select>
+
+
+  <label for="select-multiple">Select Multiple</label>
+  <select name="select-multiple" id="" multiple>
+        <option value="">Option 1</option>
+        <option value="">Option 2</option>
+        <option value="">Option 3</option>
+  </select>
+
+</section>
+    <section id="form-select-button">
+<h2>Buttons and Input Type Submit/Reset</h2>
+
+
+  <label for="button-type-button">Button Type Button</label>
+  <button type="button">Button</button>
+
+  <label for="button-type-reset">Button Type Reset</label>
+  <button type="reset">Reset</button>
+
+  <label for="button-type-submit">Button Type Submit</label>
+  <button type="submit">Submit</button>
+
+  <label for="">Input Type Button</label>
+  <input type="button" name="input-type-button" value="Button">
+
+  <label for="">Input Type Reset</label>
+  <input type="reset" name="input-type-reset">
+
+  <label for="">Input Type Submit</label>
+  <input type="submit" name="input-type-submit">
+
+  <label for="">Input Type Submit Disabled</label>
+  <input type="submit" name="input-type-submit" disabled>
+
+  <label for="">Input Type Image</label>
+  <input type="image" name="input-type-image">
+
+
+</section>
+    <section id="form-select-fieldset">
+<h2>Fieldset</h2>
+
+  <fieldset>
+
+    <legend>Legend Title</legend>
+
+    <label for="input-text">Input</label>
+    <input type="text" id="input-text">
+
+    <label for="input-password">Another Input</label>
+    <input type="text" id="input-password">
+
+  </fieldset>
+
+</section>
+  </form>
+
+
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="js/jQuery.scrollSpeed.js"></script>
