Uptade demo.html

--- a/demo.html
+++ b/demo.html
@@ -38,6 +38,7 @@
 
         <link href='https://fonts.googleapis.com/css?family=Noto+Serif:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 
+        <!-- demo -->
 
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
