Changes in styles, added Bourboun

--- a/demo.html
+++ b/demo.html
@@ -49,6 +49,54 @@
         <![endif]-->
 
 
+        <article>
+
+            <div class="grid">
+                <div class="col-1-1">
+                   <div class="content">
+
+                        <div class="important">
+                            <q>Las inclinaciones humanas más bellas, así como las más repugnantes, no forman parte de una naturaleza humana fija y biológicamente dada, sino que resultan del proceso social que crea el hombre.</q>
+                            <div class="clear"> </div>
+                            <span class="author">Erich Fromm. El miedo a la libertad (1941).</span>
+                        </div>
+
+                        <p class="dropcap">Aorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id mi ipsum. Nunc quis felis malesuada, tristique nunc ac, malesuada arcu. Praesent blandit massa nisl, quis fringilla ipsum facilisis in. Praesent sollicitudin augue id pellentesque dictum. Quisque malesuada nec quam eget scelerisque. Integer consequat laoreet eleifend. <em>Proin laoreet malesuada elit venenatis tincidunt.</em> Curabitur quis dolor eros. Vestibulum vel lectus sed nisl dapibus varius eget vel nisl. Nunc quis faucibus urna, ac fringilla orci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio nobis quas, in est veniam. Veritatis obcaecati, officiis temporibus voluptatem illum nisi laudantium impedit cupiditate. Voluptate laborum perferendis tempora libero dicta.</p>
+
+                        <div class="quote">
+                            <q> Praesent sollicitudin augue id pellentesque dictum. Quisque malesuada nec quam eget scelerisque. Integer consequat laoreet eleifend. Proin laoreet malesuada elit venenatis tincidunt. Curabitur quis dolor eros.</q>
+                        </div>
+
+                        <div class="image">
+                            <img src="img/image01.jpg" alt="">
+                            <p>Getty images<br>2015</p>
+                        </div>
+
+                        <p class="fadeInBlock"><b>Lorem ipsum dolor sit amet</b>, consectetur adipiscing elit. Morbi id mi ipsum. Nunc quis felis malesuada, tristique nunc ac, malesuada arcu. Praesent blandit massa nisl, quis fringilla ipsum facilisis in. Praesent sollicitudin augue id pellentesque dictum. Quisque malesuada nec quam eget scelerisque. Integer consequat laoreet eleifend. <a href="">Proin laoreet malesuada elit</a> venenatis tincidunt. Curabitur quis dolor eros. Vestibulum vel lectus sed nisl dapibus varius eget vel nisl. Nunc quis faucibus urna, ac fringilla orci.</p>
+                        <br>
+
+                        <div class="image">
+                            <img src="img/image02.jpg" alt="">
+                            <p>Getty images<br>2015</p>
+                        </div>
+
+                        <p>Aorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id mi ipsum. Nunc quis felis malesuada, tristique nunc ac, malesuada arcu. Praesent blandit massa nisl, quis fringilla ipsum facilisis in. Praesent sollicitudin augue id pellentesque dictum. Quisque malesuada nec quam eget scelerisque. Integer consequat laoreet eleifend. <em>Proin laoreet malesuada elit venenatis tincidunt.</em> Curabitur quis dolor eros. Vestibulum vel lectus sed nisl dapibus varius eget vel nisl. Nunc quis faucibus urna, ac fringilla orci.</p>
+
+                        <br><br>
+
+                        <div class="pie">
+                            <p>Fotografía título: unsplash.com</p>
+                        </div>
+
+                   </div>
+                </div>
+            </div>
+
+        </article>
+
+
+
+
 
 
         <h1>Heading 1</h1>
