Added: - Mixins for quote and title. - %footnote for footnotes styles. - Quote, Article, Image, and p, now ready for desktop. - Footer styles advanced. - Some variables and mixins applied.

--- a/demo.html
+++ b/demo.html
@@ -55,7 +55,7 @@
                 <div class="col-1-1">
                    <div class="content">
 
-                        <div class="important">
+                        <div class="quote important">
                             <q>Las inclinaciones humanas más bellas, así como las más repugnantes, no forman parte de una naturaleza humana fija y biológicamente dada, sino que resultan del proceso social que crea el hombre.</q>
                             <div class="clear"> </div>
                             <span class="author">Erich Fromm. El miedo a la libertad (1941).</span>
@@ -69,7 +69,7 @@
 
                         <div class="image">
                             <img src="img/image01.jpg" alt="">
-                            <p>Getty images<br>2015</p>
+                            <p class="footnote">Getty images<br>2015</p>
                         </div>
 
                         <p class="fadeInBlock"><b>Lorem ipsum dolor sit amet</b>, consectetur adipiscing elit. Morbi id mi ipsum. Nunc quis felis malesuada, tristique nunc ac, malesuada arcu. Praesent blandit massa nisl, quis fringilla ipsum facilisis in. Praesent sollicitudin augue id pellentesque dictum. Quisque malesuada nec quam eget scelerisque. Integer consequat laoreet eleifend. <a href="">Proin laoreet malesuada elit</a> venenatis tincidunt. Curabitur quis dolor eros. Vestibulum vel lectus sed nisl dapibus varius eget vel nisl. Nunc quis faucibus urna, ac fringilla orci.</p>
@@ -77,15 +77,15 @@
 
                         <div class="image">
                             <img src="img/image02.jpg" alt="">
-                            <p>Getty images<br>2015</p>
+                            <p class="footnote">Getty images<br>2015</p>
                         </div>
 
                         <p>Aorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id mi ipsum. Nunc quis felis malesuada, tristique nunc ac, malesuada arcu. Praesent blandit massa nisl, quis fringilla ipsum facilisis in. Praesent sollicitudin augue id pellentesque dictum. Quisque malesuada nec quam eget scelerisque. Integer consequat laoreet eleifend. <em>Proin laoreet malesuada elit venenatis tincidunt.</em> Curabitur quis dolor eros. Vestibulum vel lectus sed nisl dapibus varius eget vel nisl. Nunc quis faucibus urna, ac fringilla orci.</p>
 
                         <br><br>
 
-                        <div class="pie">
-                            <p>Fotografía título: unsplash.com</p>
+                        <div class="article-bottom">
+                            <p class="footnote">Fotografía título: unsplash.com</p>
                         </div>
 
                    </div>
@@ -99,7 +99,7 @@
 
 
 
-        <h1>Heading 1</h1>
+  <!--       <h1>Heading 1</h1>
         <h2>Heading 2</h2>
         <h3>Heading 3</h3>
         <h4>Heading 4</h4>
@@ -313,6 +313,33 @@
 
 </section>
   </form>
+ -->
+
+
+
+
+
+
+
+    <footer>
+
+        <div class="preFooter">
+            <ul class="socialFooter">
+                <li><a href="">Twitter</a></li>
+                <li><a href="">Instagram</a></li>
+                <li><a href="">Behance</a></li>
+                <li><a href="">LinkedIn</a></li>
+            </ul>
+        </div>
+
+        <div class="footer">
+            <div class="logoFooter">
+                <img class="logoFooter" src="img/logo-white.svg" alt="Kiwi standing on oval">
+            </div>
+            <p class="footerInfo">2015 - Todos los derechos reservados <br>sebastiangonzalez.co</p>
+        </div>
+
+    </footer>
 
 
 
