--- a/demo.html
+++ b/demo.html
@@ -12,22 +12,22 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="apple-touch.-icon" sizes="57x57" href="img/apple-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="img/apple-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="img/apple-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="img/apple-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="img/apple-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="img/apple-icon-152x152.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="img/apple-icon-180x180.png">
-        <link rel="icon" type="image/png" sizes="192x192"  href="img/android-icon-192x192.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-        <link rel="manifest" href="img/manifest.json">
+        <link rel="apple-touch.-icon" sizes="57x57" href="img/ico/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="img/ico/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="img/ico/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="img/ico/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="img/ico/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="img/ico/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="img/ico/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="img/ico/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="img/ico/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="img/ico/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="img/ico/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="img/ico/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="img/ico/favicon-16x16.png">
+        <link rel="manifest" href="img/ico/manifest.json">
         <meta name="msapplication-TileColor" content="#ffffff">
-        <meta name="msapplication-TileImage" content="img/ms-icon-144x144.png">
+        <meta name="msapplication-TileImage" content="img/ico/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
 
         <!-- Grid CSS -->
@@ -55,6 +55,8 @@
                 <div class="col-1-1">
                    <div class="content">
 
+                        <h1>Título entrada del blog.</h1>
+
                         <div class="quote important">
                             <q>Las inclinaciones humanas más bellas, así como las más repugnantes, no forman parte de una naturaleza humana fija y biológicamente dada, sino que resultan del proceso social que crea el hombre.</q>
                             <div class="clear"> </div>
@@ -72,6 +74,7 @@
                             <p class="footnote">Getty images<br>2015</p>
                         </div>
 
+                        <h2>Lorem ipsum dolor.</h2>
                         <p class="fadeInBlock"><b>Lorem ipsum dolor sit amet</b>, consectetur adipiscing elit. Morbi id mi ipsum. Nunc quis felis malesuada, tristique nunc ac, malesuada arcu. Praesent blandit massa nisl, quis fringilla ipsum facilisis in. Praesent sollicitudin augue id pellentesque dictum. Quisque malesuada nec quam eget scelerisque. Integer consequat laoreet eleifend. <a href="">Proin laoreet malesuada elit</a> venenatis tincidunt. Curabitur quis dolor eros. Vestibulum vel lectus sed nisl dapibus varius eget vel nisl. Nunc quis faucibus urna, ac fringilla orci.</p>
                         <br>
 
@@ -95,7 +98,44 @@
         </article>
 
 
+        <section id="suscribe">
+            <div class="grid">
+                <div class="col-1-1">
+                   <div class="content">
 
+
+                         <form id="suscribe-form">
+                            <!-- <section id="form-suscribe"> -->
+                            <div class="grid grid-nopad ">
+                                <div class="col-1-1 col-last">
+                                    <h2>Suscríbete para recibir alertas de nuevas entradas</h2>
+                                </div>
+
+                                <div class="col-2-3">
+                                    <input type="email" name="input-type-email" placeholder="Correo electrónico">
+                                </div>
+                                <div class="col-1-3 col-last">
+                                    <button type="submit">Suscribirme</button>
+                                </div>
+
+                                <div class="col-1-1 col-last">
+                                    <p class="footnote">Puedes darte de baja en cualquier momento.</p>
+                                </div>
+                            </div>
+                            <!-- </section> -->
+
+                        </form>
+
+
+                   </div>
+                </div>
+            </div>
+        </section>
+
+        <br>
+        <br>
+        <br>
+        <h1>DEMO</h1>
 
 
 
@@ -349,12 +389,12 @@
         <!-- SIRVE PERO SE MUEVE RARO -->
         <script src="js/main.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             // SMOOTH MOUSE SCROLL
             $(function() {
                 jQuery.scrollSpeed(40, 800);
             });
         </script>
+
     </body>
 </html>
