Multiple changesgit add .!

--- a/demo.html
+++ b/demo.html
@@ -49,13 +49,22 @@
         <![endif]-->
 
 
+                        <h1>H1 Heading</h1>
+                        <h2>H2 Heading</h2>
+                        <h3>H3 Heading</h3>
+                        <h4>H4 Heading</h4>
+                        <h5>H5 Heading</h5>
+                        <h6>H6 Heading</h6>
+
         <article>
 
             <div class="grid">
                 <div class="col-1-1">
                    <div class="content">
 
-                        <h1>Título entrada del blog.</h1>
+                        <h1 class="blog-title">Título entrada del blog.</h1>
+
+
 
                         <div class="quote important">
                             <q>Las inclinaciones humanas más bellas, así como las más repugnantes, no forman parte de una naturaleza humana fija y biológicamente dada, sino que resultan del proceso social que crea el hombre.</q>
@@ -101,10 +110,9 @@
         <section id="suscribe">
             <div class="grid">
                 <div class="col-1-1">
-                   <div class="content">
+                    <div class="content">
 
-
-                         <form id="suscribe-form">
+                        <form id="suscribe-form">
                             <!-- <section id="form-suscribe"> -->
                             <div class="grid grid-nopad ">
                                 <div class="col-1-1 col-last">
@@ -124,19 +132,57 @@
                             </div>
                             <!-- </section> -->
 
-                        </form>
-
+                      </form>
 
                    </div>
                 </div>
             </div>
         </section>
 
-        <br>
-        <br>
-        <br>
-        <h1>DEMO</h1>
 
+        <section id="comments">
+
+            <div class="grid">
+                <div class="col-1-1">
+                    <div class="content">
+
+                        <div class="title-section">
+                            <h2>Comentarios</h2>
+                        </div>
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa eveniet, omnis ut, qui aspernatur neque unde velit officia molestias nostrum necessitatibus itaque placeat incidunt ratione. Earum sequi, odio quia illum?</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+
+        <section id="comments">
+
+            <div class="grid">
+                <div class="col-1-1">
+                    <div class="content">
+
+                        <div class="title-section">
+                            <h2>Entradas</h2>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-1-2">
+                    <div class="content">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, omnis atque tempore aliquid ab laboriosam sapiente, vitae natus excepturi dolor eveniet earum veritatis temporibus. Repellat voluptatibus quam, tenetur rem aut.</p>
+                    </div>
+                </div>
+                <div class="col-1-2">
+                    <div class="content">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, aut eius illum optio non ea, corporis impedit maxime ipsa dolorum magni magnam quia, sequi necessitatibus architecto consequuntur debitis quis consequatur!</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
 
 
   <!--       <h1>Heading 1</h1>
@@ -391,9 +437,9 @@
 
         <script>
             // SMOOTH MOUSE SCROLL
-            $(function() {
-                jQuery.scrollSpeed(40, 800);
-            });
+            // $(function() {
+            //     jQuery.scrollSpeed(40, 800);
+            // });
         </script>
 
     </body>
