Added footer and suscribe section, fixed responsive settings, TODO: text styles and titles

--- a/index alt.html
+++ b/index alt.html
@@ -46,99 +46,137 @@
 
     <body>
 
-        <div class="wrap container-fluid">
+        <article>
 
-            <div class="row">
-                <div class="col-xs-12">
+            <div class="wrap container-fluid">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="content">
 
-                    <div class="content">
+                            <h1 class="blog-title">Título entrada del blog.</h1>
 
-                        <h1 class="blog-title">Título entrada del blog.</h1>
+                            <div class="quote important">
+                                <q>Las inclinaciones humanas más bellas, así como las más repugnantes, no forman parte de una naturaleza humana fija y biológicamente dada, sino que resultan del proceso social que crea el hombre.</q>
+                                <div class="clear"> </div>
+                                <span class="author">Erich Fromm. El miedo a la libertad (1941).</span>
+                            </div>
 
-                        <div class="quote important">
-                            <q>Las inclinaciones humanas más bellas, así como las más repugnantes, no forman parte de una naturaleza humana fija y biológicamente dada, sino que resultan del proceso social que crea el hombre.</q>
-                            <div class="clear"> </div>
-                            <span class="author">Erich Fromm. El miedo a la libertad (1941).</span>
-                        </div>
+                            <p class="dropcap">Aorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id mi ipsum. Nunc quis felis malesuada, tristique nunc ac, malesuada arcu. Praesent blandit massa nisl, quis fringilla ipsum facilisis in. Praesent sollicitudin augue id pellentesque dictum. Quisque malesuada nec quam eget scelerisque. Integer consequat laoreet eleifend. <em>Proin laoreet malesuada elit venenatis tincidunt.</em> Curabitur quis dolor eros. Vestibulum vel lectus sed nisl dapibus varius eget vel nisl. Nunc quis faucibus urna, ac fringilla orci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio nobis quas, in est veniam. Veritatis obcaecati, officiis temporibus voluptatem illum nisi laudantium impedit cupiditate. Voluptate laborum perferendis tempora libero dicta.</p>
 
-                        <p class="dropcap">Aorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id mi ipsum. Nunc quis felis malesuada, tristique nunc ac, malesuada arcu. Praesent blandit massa nisl, quis fringilla ipsum facilisis in. Praesent sollicitudin augue id pellentesque dictum. Quisque malesuada nec quam eget scelerisque. Integer consequat laoreet eleifend. <em>Proin laoreet malesuada elit venenatis tincidunt.</em> Curabitur quis dolor eros. Vestibulum vel lectus sed nisl dapibus varius eget vel nisl. Nunc quis faucibus urna, ac fringilla orci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio nobis quas, in est veniam. Veritatis obcaecati, officiis temporibus voluptatem illum nisi laudantium impedit cupiditate. Voluptate laborum perferendis tempora libero dicta.</p>
+                            <div class="quote">
+                                <q> Praesent sollicitudin augue id pellentesque dictum. Quisque malesuada nec quam eget scelerisque. Integer consequat laoreet eleifend. Proin laoreet malesuada elit venenatis tincidunt. Curabitur quis dolor eros.</q>
+                            </div>
 
-                        <div class="quote">
-                            <q> Praesent sollicitudin augue id pellentesque dictum. Quisque malesuada nec quam eget scelerisque. Integer consequat laoreet eleifend. Proin laoreet malesuada elit venenatis tincidunt. Curabitur quis dolor eros.</q>
-                        </div>
+                            <div class="image">
+                                <img src="img/image01.jpg" alt="">
+                                <p class="footnote">Getty images<br>2015</p>
+                            </div>
 
-                        <div class="image">
-                            <img src="img/image01.jpg" alt="">
-                            <p class="footnote">Getty images<br>2015</p>
-                        </div>
+                            <h2>Lorem ipsum dolor.</h2>
+                            <p class="fadeInBlock"><b>Lorem ipsum dolor sit amet</b>, consectetur adipiscing elit. Morbi id mi ipsum. Nunc quis felis malesuada, tristique nunc ac, malesuada arcu. Praesent blandit massa nisl, quis fringilla ipsum facilisis in. Praesent sollicitudin augue id pellentesque dictum. Quisque malesuada nec quam eget scelerisque. Integer consequat laoreet eleifend. <a href="">Proin laoreet malesuada elit</a> venenatis tincidunt. Curabitur quis dolor eros. Vestibulum vel lectus sed nisl dapibus varius eget vel nisl. Nunc quis faucibus urna, ac fringilla orci.</p>
+                            <br>
 
-                        <h2>Lorem ipsum dolor.</h2>
-                        <p class="fadeInBlock"><b>Lorem ipsum dolor sit amet</b>, consectetur adipiscing elit. Morbi id mi ipsum. Nunc quis felis malesuada, tristique nunc ac, malesuada arcu. Praesent blandit massa nisl, quis fringilla ipsum facilisis in. Praesent sollicitudin augue id pellentesque dictum. Quisque malesuada nec quam eget scelerisque. Integer consequat laoreet eleifend. <a href="">Proin laoreet malesuada elit</a> venenatis tincidunt. Curabitur quis dolor eros. Vestibulum vel lectus sed nisl dapibus varius eget vel nisl. Nunc quis faucibus urna, ac fringilla orci.</p>
-                        <br>
+                            <div class="image">
+                                <img src="img/image02.jpg" alt="">
+                                <p class="footnote">Getty images<br>2015</p>
+                            </div>
 
-                        <div class="image">
-                            <img src="img/image02.jpg" alt="">
-                            <p class="footnote">Getty images<br>2015</p>
-                        </div>
+                            <p>Aorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id mi ipsum. Nunc quis felis malesuada, tristique nunc ac, malesuada arcu. Praesent blandit massa nisl, quis fringilla ipsum facilisis in. Praesent sollicitudin augue id pellentesque dictum. Quisque malesuada nec quam eget scelerisque. Integer consequat laoreet eleifend. <em>Proin laoreet malesuada elit venenatis tincidunt.</em> Curabitur quis dolor eros. Vestibulum vel lectus sed nisl dapibus varius eget vel nisl. Nunc quis faucibus urna, ac fringilla orci.</p>
 
-                        <p>Aorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id mi ipsum. Nunc quis felis malesuada, tristique nunc ac, malesuada arcu. Praesent blandit massa nisl, quis fringilla ipsum facilisis in. Praesent sollicitudin augue id pellentesque dictum. Quisque malesuada nec quam eget scelerisque. Integer consequat laoreet eleifend. <em>Proin laoreet malesuada elit venenatis tincidunt.</em> Curabitur quis dolor eros. Vestibulum vel lectus sed nisl dapibus varius eget vel nisl. Nunc quis faucibus urna, ac fringilla orci.</p>
+                            <br><br>
 
-                        <br><br>
+                            <div class="article-bottom">
+                                <p class="footnote">Fotografía título: unsplash.com</p>
+                            </div>
 
-                        <div class="article-bottom">
-                            <p class="footnote">Fotografía título: unsplash.com</p>
                         </div>
                     </div>
                 </div>
             </div>
 
+        </article>
+
+        <section id="suscribe">
+
+            <div class="wrap container-fluid">
 
 
+                    <form id="suscribe-form">
+                        <!-- <section id="form-suscribe"> -->
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <h2>Suscríbete para recibir alertas de nuevas entradas</h2>
+                            </div>
+
+                            <div class="col-xs-12 col-sm-8 no-padding-r ">
+                                <input type="email" name="input-type-email" placeholder="Correo electrónico">
+                            </div>
+                            <div class="col-xs-12 col-sm-4">
+                                <button type="submit">Suscribirme</button>
+                            </div>
+
+                            <div class="col-xs-12">
+                                <p class="footnote">Puedes darte de baja en cualquier momento.</p>
+                            </div>
+                        </div>
+                        <!-- </section> -->
+
+                    </form>
 
 
-            <div class="row">
-                <div class="col-xs-12">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero vel nobis corporis dolorem velit perferendis asperiores, pariatur, temporibus totam mollitia, porro maiores tenetur sit voluptatum quia harum quo illum, voluptatem?</p>
+                </div>
+            </div>
+
+        </section>
+
+
+        <section id="comments">
+
+            <div class="wrap container-fluid">
+                <div class="row">
+                    <div class="col-xs-12">
+
+                        <div class="title-section">
+                            <h2>Entradas</h2>
+                        </div>
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, omnis atque tempore aliquid ab laboriosam sapiente, vitae natus excepturi dolor eveniet earum veritatis temporibus. Repellat voluptatibus quam, tenetur rem aut.</p>
+
+                    </div>
                 </div>
             </div>
 
 
-            <div class="row">
-                <div class="col-xs-12 col-sm-3 col-md-6">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam accusamus blanditiis quo quam vel, quis repudiandae animi unde. Eligendi nostrum dolorum molestiae minus debitis iure eveniet magnam ratione, id nam.</p>
-                </div>
-                <div class="col-xs-12 col-sm-4 col-md-2">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam accusamus blanditiis quo quam vel, quis repudiandae animi unde. Eligendi nostrum dolorum molestiae minus debitis iure eveniet magnam ratione, id nam.</p>
-                </div>
-                <div class="col-xs-12 col-sm-3 col-md-2">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam accusamus blanditiis quo quam vel, quis repudiandae animi unde. Eligendi nostrum dolorum molestiae minus debitis iure eveniet magnam ratione, id nam.</p>
-                </div>
-                <div class="col-xs-12 col-sm-2 col-md-2">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam accusamus blanditiis quo quam vel, quis repudiandae animi unde. Eligendi nostrum dolorum molestiae minus debitis iure eveniet magnam ratione, id nam.</p>
-                </div>
+        </section>
+
+
+
+        <footer>
+
+            <div class="preFooter">
+                <ul class="socialFooter">
+                    <li><a href="">Twitter</a></li>
+                    <li><a href="">Instagram</a></li>
+                    <li><a href="">Behance</a></li>
+                    <li><a href="">LinkedIn</a></li>
+                </ul>
             </div>
 
-
-            <div class="row">
-                <div class="col-xs-12 col-sm-4 ">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam accusamus blanditiis quo quam vel, quis repudiandae animi unde. Eligendi nostrum dolorum molestiae minus debitis iure eveniet magnam ratione, id nam.</p>
+            <div class="footer">
+                <div class="logoFooter">
+                    <img class="logoFooter" src="img/logo-white.svg" alt="Kiwi standing on oval">
                 </div>
-                <div class="col-xs-12 col-sm-4 ">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam accusamus blanditiis quo quam vel, quis repudiandae animi unde. Eligendi nostrum dolorum molestiae minus debitis iure eveniet magnam ratione, id nam.</p>
-                </div>
-                <div class="col-xs-12 col-sm-4 ">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam accusamus blanditiis quo quam vel, quis repudiandae animi unde. Eligendi nostrum dolorum molestiae minus debitis iure eveniet magnam ratione, id nam.</p>
-                </div>
+                <p class="footerInfo">2015 - Todos los derechos reservados <br>sebastiangonzalez.co</p>
             </div>
 
-        </div>
+        </footer>
 
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script src="js/jQuery.scrollSpeed.js"></script>
+<!--         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script src="js/jQuery.scrollSpeed.js"></script> -->
 
         <!-- SIRVE PERO SE MUEVE RARO -->
-        <script src="js/main.js"></script>
+<!--    <script src="js/main.js"></script> -->
 
         <script>
             // SMOOTH MOUSE SCROLL
