Added: - Menu-header styles. - Menu on scroll (need some fixes). - Script cleanup. - Footer and menu styles.

--- a/index alt.html
+++ b/index alt.html
@@ -46,18 +46,20 @@
 
     <body>
 
-        <header id="header" class="mobile_fixed sticky">
+        <header id="header" class="">
 
             <div class="header-in">
 
                 <div class="logo">
-                    <img class="header-logo" src="img/logo-white.svg" alt="www.sebastiangonzalez.co">
+                    <a href="#header">
+                        <img class="header-logo" src="img/logo-white.svg" alt="www.sebastiangonzalez.co">
+                    </a>
                 </div>
 
-                <a id="responsive-nav-button" class="responsive-nav-button" href="#"></a>
+                <!-- <a id="responsive-nav-button" class="responsive-nav-button" href="#"></a> -->
 
                 <nav id="navigation" class="navigation">
-                    <ul id="menu-sebastiangonzalez" class="menu">
+                    <ul id="menu-desktop" class="menu">
                         <li><a href="#">Bio</a></li>
                         <li><a href="#">Portafolio</a></li>
                         <li><a href="#">Blog</a></li>
@@ -208,7 +210,9 @@
 
             <div class="footer">
                 <div class="footer-logo">
-                    <img class="footer-logo" src="img/logo-white.svg" alt="www.sebastiangonzalez.co">
+                    <a href="#header">
+                        <img class="footer-logo" src="img/logo-white.svg" alt="www.sebastiangonzalez.co">
+                    </a>
                 </div>
                 <p class="footerInfo">2015 - Todos los derechos reservados <br>sebastiangonzalez.co</p>
             </div>
