Added: - Menu mobile styles and scrypts. - SCSS mobile nearly done. - TODO: change name of classes and ids.

--- a/index alt.html
+++ b/index alt.html
@@ -80,9 +80,36 @@
                     </ul>
                 </nav>
 
+                <div id="bt-menu-mobile">
+                    <span class="top"></span>
+                    <span class="middle"></span>
+                    <span class="bottom"></span>
+                </div>
+
             </div>
 
         </header>
+
+
+        <!-- MENU MOBILE -->
+        <div class="overlay-mobile">
+            <div class="wrapper-container">
+
+                <ul id="wrapper-mobile" class="menu">
+                    <!-- <li><a href="#" class="mobile-anchor fade-in one">Servicios</a></li>
+                    <li><a href="#" class="mobile-anchor fade-in two">Portafolio</a></li>
+                    <li><a href="#" class="mobile-anchor fade-in three">Blog</a></li>
+                    <li><a href="#" class="mobile-anchor fade-in four">Contacto</a></li> -->
+
+                    <li><a href="#">Servicios</a></li>
+                    <li><a href="#">Portafolio</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contacto</a></li>
+
+                </ul>
+            </div>
+        </div>
+
 
 
         <article>
